Subprojects for API and REPL